feat: add office report exports
